--- a/home.templ
+++ b/home.templ
@@ -27,7 +27,7 @@ templ Home() {
 	</head>
 	<body>
 		<div id='main'>
-			<h1>Welcome!</h1>
+			<h1>Welcome to my place, Friend!</h1>
 			<p>
 				I'm Emmanuel, a software developer based on San Francisco, California.
 			</p>
